--- a/.travis.yml
+++ b/.travis.yml
@@ -23,5 +23,6 @@ deploy:
   upload-dir: godoc/encoding
   skip-cleanup: true
   acl: public-read
+  cache-control: no-cache
   on:
     repo: goadesign/encoding
